<resources>
    <string name="app_name">IMBD App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Internet Movie BD</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_popularity">Puntuación</string>

    <string name="Fallback_network">Error de Red</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_search">Buscar</string>

    <string name="action_watch_later">Ver después</string>
    <string name="msj_video_added">Video agregado</string>

    <string name="menu_tab1">Este año</string>
    <string name="menu_tab2">Favoritas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
